style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

.weather {
  background: rgb(13, 218, 202);
  background: linear-gradient(
    38deg,
    rgba(13, 218, 202, 1) 37%,
    rgba(0, 48, 255, 1) 100%
  );
  margin: 5em auto;
  width: 50%;
  border-radius: 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  padding: 3em;
}
.weather h1 {
  color: white;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.151);
}
.search-bar {
  display: flex;
  justify-content: center;
  gap: 0.5em;
  padding-top: 1em;
}
.search-bar > input {
  border: none;
  outline: none;
  padding: 10px;
  border-radius: 50px;
  text-align: center;
  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.301);
}
.search-bar > input:focus {
  outline: 2px solid rgb(65, 76, 126);
}

.search-bar button {
  border: none;
  outline: none;
  border-radius: 50%;
  width: 38px;
  cursor: pointer;
  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.301);
  transition: all 0.3s;
}
.search-bar button:hover {
  background-color: rgba(20, 19, 19, 0.541);
  color: white;
}
.search-bar button:active {
  background-color: rgba(20, 19, 19, 0.651);
  color: white;
}
.weather-info {
  width: 100%;
  text-align: center;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.301);
  display: none;
}
.weather-info i {
  font-size: 5em;
  color: white;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.212);
}
.weather-info p {
  font-size: 36px;
  color: rgb(255, 255, 255);
  text-shadow: 1 1px 4px rgba(0, 0, 0, 0.705);
}
.row {
  display: flex;
  justify-content: space-around;
  padding: 1em 3em 4em 3em;
}

.col .bi {
  font-size: 1.2em;
  font-style: normal;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.705);
}
.bi-wind {
  margin-top: 15px;
}
.error {
  display: none;
  font-size: 18px;
  color: red;
  margin-top: 1em;
}

